# hours

./: Cargo.toml  README.md  justfile
issues/: add-just-install-recipe.md  add-version-flag-to-cli.md  add-yaml-frontmatter-to-specs.md  fix-integration-test-clippy-warnings.md  make-install-default-just-recipe.md  weekly-average-direct-only.md
plans/implementation/: plan.md
specs/: README.md  architecture.md  cli-system.md  config-system.md  data-model.md  git-sync.md  pdf-export.md  summary-system.md  validate
src/: config.rs  git.rs  main.rs  pdf.rs
src/cli/: add.rs  edit.rs  export.rs  init.rs  list.rs  mod.rs  summary.rs
src/data/: mod.rs  model.rs  store.rs  week.rs
src/ui/: mod.rs  prompts.rs
tests/: integration.rs
